# Teaching-Assistance-frontend-work

./: .gitignore  API接口前后端详细文档.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  数据库设计.md
backend/: .gitignore  README.md  alembic.ini  env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/admin/adapter/: input.py  repository.py
backend/app/admin/application/: schema.py  service.py
backend/app/admin/domain/: entity.py  repository.py
backend/app/auth/adapter/: __init__.py  input.py  repository.py
backend/app/auth/application/: __init__.py  schema.py  service.py
backend/app/auth/domain/: __init__.py  repository.py
backend/app/core/: config.py  database.py  exceptions.py  helpers.py  repository.py
backend/app/core/helpers/: __init__.py  token.py
backend/app/course/: __init__.py
backend/app/course/adapter/: __init__.py  input.py  repository.py
backend/app/course/application/: __init__.py  schema.py  service.py
backend/app/course/domain/: __init__.py  repository.py
backend/app/models/: __init__.py  course.py  course_material.py  course_objective.py  course_syllabus.py  user.py
backend/app/teacher/adapter/: input.py  repository.py
backend/app/teacher/application/: schema.py  service.py
backend/app/teacher/domain/: entity.py  repository.py
backend/app/user/adapter/: input.py  repository.py
backend/docker/: README.md
backend/repository/: README.md
backend/tests/: README.md  conftest.py  test_admin.py  test_auth.py  test_course.py
src/: App.vue  main.ts  (+1 more)
(+41 files in other folders)
